# telco-churn

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.tmp_dagster_home_tiyw_kgu/history/: runs.db
.tmp_dagster_home_tiyw_kgu/history/runs/: index.db
.tmp_dagster_home_tiyw_kgu/schedules/: schedules.db
.tmp_dagster_home_uc6ak26n/history/: runs.db
.tmp_dagster_home_uc6ak26n/history/runs/: .db  index.db
.tmp_dagster_home_uc6ak26n/schedules/: schedules.db
data/bronze/: offline.sql  online.py
data/silver/: offline.sql  online.py
data_setup/: curate_batch.py  split_online_batch.py
notebooks/: eda.ipynb
pipelines/: batch_pipeline.py  data_pipeline.py  feature_store_pipeline.py  promotion_pipeine.py  train_pipeline.py
runs/run_20260120T084135Z_c146672a/: metadata.json  metrics.json  model.joblib
runs/run_20260123T050107Z_8776bae4/: metadata.json  metrics.json  model.joblib
space/: app.py
src/telco_churn/: config.py  definitions.py  jobs.py  logging_utils.py  paths.py
src/telco_churn/assets/: action.py  batch_base.py  batch_features.py  best_contender.py  bronze_batch.py  bronze_train.py  bundle.py  champion.py  df_features.py  fit_artifact.py  holdout.py  ingest_batch_data.py  ingest_train_data.py  labels.py  materialise_gold.py  model_data.py  params.py  promote.py  promotion_decision.py  report.py  score.py  summary.py  threshold.py  train_base.py  train_features.py  train_join_labels.py  tts_cv.py  upload_bundle.py  upload_report.py
src/telco_churn/batch/: action.py  latest_batch.py  scored.py  summary.py
src/telco_churn/db/: executor.py
src/telco_churn/env_utils/: helpers.py
src/telco_churn/executor/: executor_sql.py
src/telco_churn/explainability/: action_map.py  decision_codes.py  explain.py
src/telco_churn/io/: atomic.py  bundle.py  hf.py  hf_run_metrics.py  load_metrics_json.py  load_model.py
src/telco_churn/jobs/: batch.py  train.py
src/telco_churn/modeling/: config.py  create_bundle.py  evaluate.py  fit.py  optuna.py  run_id.py  threshold.py  train_pipeline_ops.py  types.py
src/telco_churn/parity/: parity_test.py
src/telco_churn/promotion/: best_candidate.py  contender_vs_champion.py  decision.py  new_champion.py  promotion_decision.py  promotion_pipeline_utils.py  registry.py  type.py
src/telco_churn/redis/: config.py  connect.py  infra.py  reader.py  redis.py  writer.py  (+1 more)
(+96 files in other folders)
