description = "Telco Churn"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "duckdb==1.4.3",
  "huggingface-hub[cli]",
  "redis==7.1.0",
  "pandas==2.3.3",
  "scikit-learn==1.8.0",
  "optuna==4.6.0",
  "numpy==2.3.5",
  "xgboost==3.1.2",
  "lightgbm==4.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
telco_churn = ["**/*.sql", "**/*.json"]

[project.optional-dependencies]
dev = [
  "jupyter",
  "ipykernel",
]