description = "Telco Churn"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "duckdb==1.4.3",
  "huggingface-hub[cli]>=0.20",
  "redis==7.1.0",
  "pandas>=2.2.2,<2.3",
  "numpy>=2.0,<2.2",
  "scikit-learn==1.8.0",
  "optuna==4.6.0",
  "xgboost==3.1.2",
  "lightgbm==4.6.0",
  "gradio==6.2.0",
  "pyarrow==22.0.0",
  "shap==0.50.0"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
telco_churn = ["**/*.sql", "**/*.json"]

[project.optional-dependencies]
dev = [
  "jupyter",
  "ipykernel",
]