[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn"
version = "0.1.0"
description = "Telco Churn"
requires-python = ">=3.11,<3.14"

dependencies = [
  "numpy>=2.2,<2.3",
  "pandas>=2.2,<3",
  "pyarrow>=22,<24",
  "duckdb>=1.4,<2",
  "huggingface-hub>=1.3,<2",

  "scikit-learn>=1.8,<1.9",
  "optuna>=4.7,<4.8",
  "xgboost>=3.1,<3.2",
  "lightgbm>=4.6,<4.7",
  "shap>=0.50,<0.51",

  "numba>=0.61,<0.62",

  "dagster>=1.12,<1.13",
  "dagster-webserver>=1.12,<1.13",
  "dagster-dg-cli>=1.12,<1.13",
  "dagster-duckdb>=0.28,<0.29",
]


[project.optional-dependencies]

dev = [
  "jupyter",
  "ipykernel",
]

[tool.dagster]
module_name = "telco_churn.definitions"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
telco_churn = ["**/*.sql", "**/*.json"]